# pypod

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  player.py  progress.py  pyproject.toml  song.py  style.css  ui.py
.github/workflows/: checks.yml  release.yml
pypod/: app.py  cli.py  config.py  player.py  song.py  style.css  ui.py  utils.py
