[tool.poetry]
name = "pypod"
version = "0.1.0"
description = ""
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyaudio = "^0.2.12"
click = "^8.1.3"
rich = "^12.6.0"
textual = "^0.5.0"

[tool.poetry.scripts]
pypod = 'pypod.cli:cli'

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
