[tool.poetry]
name = "python-pod"
packages = [
  { include = "pypod" }
]
version = "0.1.0"
description = "Python terminal music player"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyaudio = "^0.2.12"
click = "^8.1.3"
textual = "^0.9.1"
rich = "^13.0.0"

[tool.poetry.scripts]
pypod = 'pypod.cli:cli'

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
upload_to_repository = false
upload_to_release = false  # do not upload distribution to GH releases
build_command = false
major_on_zero = false
tag_commit = true
commit_subject = "Release {version}"
changelog_file = "CHANGELOG.md"
changelog_scope = false

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.32.2"
textual = {version = "^0.9.1", extras = ["dev"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
